# fetch_ros1

./: .gitignore  README.md
src/fetch-picker/applications/: CMakeLists.txt
src/fetch-picker/applications/launch/: nav_rviz.launch
src/fetch-picker/applications/launch/maps/: playground.pgm  playground.yaml
src/fetch-picker/applications/scripts/: arm_demo.py  arm_obstacle_demo.py  autopick_teleop.py  base_demo.py  cart_arm_demo.py  check_cart_pose.py  ee_pose_demo.py  gripper_teleop.py  head_demo.py  interactive_marker_demo.py  joint_reader_demo.py  keyboard_teleop.py  lab26_obstacles.py  marker_demo.py  path_marker.py  publish_saved_clouds.py  torso_demo.py  transformation_demo.py
src/fetch-picker/joint_state_reader/src/joint_state_reader/: reader.py
src/fetch-picker/perception/: CMakeLists.txt  package.xml  setup.py
src/fetch-picker/perception/src/: save_cloud_main.cpp
src/fetch-picker/perception/src/perception/: mock_camera.py
src/fetch-picker/robot_api/src/robot_api/: __init__.py  arm.py  base.py  gripper.py  gripper_marker_utils.py  head.py  six_dof_controls.py  torso.py
